feat(accounts): add login user interface and update template links

--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -64,7 +64,7 @@
 
             <div class="text-center">
                 <span class="text-gray-600">Already have an account?</span>
-                <a href="#" class="font-semibold text-[#4F2FC0] hover:text-[indigo-500]">
+                <a href="{% url 'login' %}" class="font-semibold text-[#4F2FC0] hover:text-[indigo-500]">
                     Login
                 </a>
             </div>
