--- a/templates/landing.html
+++ b/templates/landing.html
@@ -42,7 +42,7 @@
                        class="w-40 px-8 py-3 bg-white text-purple-700 rounded-full font-semibold hover:bg-gray-100 transition">
                         Register
                     </a>
-                    <a href="#" 
+                    <a href="{% url 'login' %}" 
                        class="w-40 px-8 py-3 bg-transparent border-2 border-white text-white rounded-full font-semibold hover:bg-white/10 transition">
                         Login
                     </a>
