feat(accounts): added render request for musician_profile

--- a/accounts/templates/accounts/musician_profile.html
+++ b/accounts/templates/accounts/musician_profile.html
@@ -80,9 +80,9 @@
 
             
             <div class="flex justify-center">
-                <button class="px-8 py-3 rounded-full text-white font-semibold transition hover:opacity-90 flex items-center gap-2" style="background-color: var(--primary-color);">
+                <a href="{% url 'logout' %}" class="px-8 py-3 rounded-full text-white font-semibold transition hover:opacity-90 flex items-center gap-2" style="background-color: var(--primary-color);">
                     Logout
-                </button>
+                </a>
             </div>
         </div>
 
