fix(accounts): changed static username to dynamic

--- a/accounts/templates/accounts/musician_profile.html
+++ b/accounts/templates/accounts/musician_profile.html
@@ -56,7 +56,7 @@
                         <div class="space-y-6">
                             <div>
                                 <p class="text-gray-600 text-sm mb-1">Full Name</p>
-                                <p class="text-gray-900 font-bold" id="viewFullName">Juan Dela Cruz</p>
+                                <p class="text-gray-900 font-bold" id="viewFullName">{{ user.username }}</p>
                             </div>
                             <div>
                                 <p class="text-gray-600 text-sm mb-1">Email Address</p>
