fix(accounts): changed static email to dynamic

--- a/accounts/templates/accounts/musician_profile.html
+++ b/accounts/templates/accounts/musician_profile.html
@@ -55,12 +55,12 @@
                         
                         <div class="space-y-6">
                             <div>
-                                <p class="text-gray-600 text-sm mb-1">Full Name</p>
+                                <p class="text-gray-600 text-sm mb-1">Username</p>
                                 <p class="text-gray-900 font-bold" id="viewFullName">{{ user.username }}</p>
                             </div>
                             <div>
                                 <p class="text-gray-600 text-sm mb-1">Email Address</p>
-                                <p class="text-gray-900 font-bold" id="viewEmail">juandelacruz@gmail.com</p>
+                                <p class="text-gray-900 font-bold" id="viewEmail">{{ user.email }}</p>
                             </div>
                             <div>
                                 <p class="text-gray-600 text-sm mb-1">Role</p>
