fix(accounts): changed static role to dynamic

--- a/accounts/templates/accounts/musician_profile.html
+++ b/accounts/templates/accounts/musician_profile.html
@@ -64,7 +64,7 @@
                             </div>
                             <div>
                                 <p class="text-gray-600 text-sm mb-1">Role</p>
-                                <p class="text-gray-900 font-bold" id="viewRoleField">Musician</p>
+                                <p class="text-gray-900 font-bold" id="viewRoleField">{{ user.role }}</p>
                             </div>
                         </div>
 
