fix(accounts): changed static instruments to dynamic

--- a/accounts/templates/accounts/musician_profile.html
+++ b/accounts/templates/accounts/musician_profile.html
@@ -72,7 +72,7 @@
                         <div class="space-y-6">
                             <div>
                                 <p class="text-gray-600 text-sm mb-1">Instrument/s</p>
-                                <p class="text-gray-900 font-bold" id="viewInstruments">Guitar, Piano</p>
+                                <p class="text-gray-900 font-bold" id="viewInstruments">{{ user.instruments }}</p>
                             </div>
                             <div>
                                 <p class="text-gray-600 text-sm mb-1">Genre/s</p>
