fix(accounts): changed static genres to dynamic

--- a/accounts/templates/accounts/musician_profile.html
+++ b/accounts/templates/accounts/musician_profile.html
@@ -76,7 +76,7 @@
                             </div>
                             <div>
                                 <p class="text-gray-600 text-sm mb-1">Genre/s</p>
-                                <p class="text-gray-900 font-bold" id="viewGenres">Jazz, Pop</p>
+                                <p class="text-gray-900 font-bold" id="viewGenres">{{ user.genres }}</p>
                             </div>
                             <div>
                                 <p class="text-gray-600 text-sm mb-1">Location</p>
