fix(accounts): changed static location  to dynamic

--- a/accounts/templates/accounts/musician_profile.html
+++ b/accounts/templates/accounts/musician_profile.html
@@ -80,7 +80,7 @@
                             </div>
                             <div>
                                 <p class="text-gray-600 text-sm mb-1">Location</p>
-                                <p class="text-gray-900 font-bold" id="viewLocationField">Cebu City</p>
+                                <p class="text-gray-900 font-bold" id="viewLocationField">{{ user.location }}</p>
                             </div>
                         </div>
                     </div>
