fix(accounts): changed static primary details to dynamic

--- a/accounts/templates/accounts/musician_profile.html
+++ b/accounts/templates/accounts/musician_profile.html
@@ -42,9 +42,9 @@
                             </span>
                         </div>
                         <div>
-                            <h2 class="text-xl font-bold text-gray-900" id="viewName">Juan Dela Cruz</h2>
-                            <p class="text-gray-600" id="viewRole">Musician</p>
-                            <p class="text-gray-600" id="viewLocation">Cebu City</p>
+                            <h2 class="text-xl font-bold text-gray-900" id="viewName">{{ user.username }}</h2>
+                            <p class="text-gray-600" id="viewRole">{{ user.role }}</p>
+                            <p class="text-gray-600" id="viewLocation">{{ user.location }}</p>
                         </div>
                     </div>
                 </div>
