fix(accounts: changed primary static data to dynamic

--- a/accounts/templates/accounts/edit_musician_profile.html
+++ b/accounts/templates/accounts/edit_musician_profile.html
@@ -54,9 +54,9 @@
                             </button>
                         </div>
                         <div class="flex flex-col gap-2">
-                            <input type="text" id="editNameHeader" placeholder="Name" class="px-3 py-1 border border-gray-300 rounded-full text-sm focus:outline-none focus:ring-2" style="--tw-ring-color: var(--primary-color);">
-                            <input type="text" id="editRoleHeader" placeholder="Role" class="px-3 py-1 border border-gray-300 rounded-full text-sm focus:outline-none focus:ring-2" style="--tw-ring-color: var(--primary-color);">
-                            <input type="text" id="editLocationHeader" placeholder="Location" class="px-3 py-1 border border-gray-300 rounded-full text-sm focus:outline-none focus:ring-2" style="--tw-ring-color: var(--primary-color);">
+                            <input type="text" id="editNameHeader" placeholder="{{ user.username }}" class="px-3 py-1 border border-gray-300 rounded-full text-sm focus:outline-none focus:ring-2" style="--tw-ring-color: var(--primary-color);">
+                            <input type="text" id="editRoleHeader" placeholder="{{ user.role }}" class="px-3 py-1 border border-gray-300 rounded-full text-sm focus:outline-none focus:ring-2" style="--tw-ring-color: var(--primary-color);">
+                            <input type="text" id="editLocationHeader" placeholder="{{ user.location }}" class="px-3 py-1 border border-gray-300 rounded-full text-sm focus:outline-none focus:ring-2" style="--tw-ring-color: var(--primary-color);">
                         </div>
                     </div>
                     <button class="font-semibold transition hover:opacity-80" style="color: var(--primary-color);">Upload New</button>
