--- a/accounts/templates/accounts/edit_musician_profile.html
+++ b/accounts/templates/accounts/edit_musician_profile.html
@@ -53,11 +53,12 @@
                                 </svg>
                             </button>
                         </div>
-                        <div class="flex flex-col gap-2">
+                        <!-- Redundant Attributes -->
+                        <!-- <div class="flex flex-col gap-2">
                             <input type="text" id="editNameHeader" placeholder="{{ user.username }}" class="px-3 py-1 border border-gray-300 rounded-full text-sm focus:outline-none focus:ring-2" style="--tw-ring-color: var(--primary-color);">
                             <input type="text" id="editRoleHeader" placeholder="{{ user.role }}" class="px-3 py-1 border border-gray-300 rounded-full text-sm focus:outline-none focus:ring-2" style="--tw-ring-color: var(--primary-color);">
                             <input type="text" id="editLocationHeader" placeholder="{{ user.location }}" class="px-3 py-1 border border-gray-300 rounded-full text-sm focus:outline-none focus:ring-2" style="--tw-ring-color: var(--primary-color);">
-                        </div>
+                        </div> -->
                     </div>
                     <button class="font-semibold transition hover:opacity-80" style="color: var(--primary-color);">Upload New</button>
                 </div>
