--- a/accounts/templates/accounts/musician_profile.html
+++ b/accounts/templates/accounts/musician_profile.html
@@ -23,11 +23,19 @@
         <div id="viewMode">
             <div class="mb-8 flex items-center relative">
                 <!-- CHANGE TO HOME URL -->
-                <button onclick="window.history.back()" class="text-gray-600 hover:text-gray-900 transition absolute left-0 top-1/2 -translate-y-1/2">
+                 
+                <a href="/home/" class="text-gray-600 hover:text-gray-900 transition absolute left-0 top-1/2 -translate-y-1/2">
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path>
                     </svg>
-                </button>
+                </a>
+                <!-- <button onclick="window.history.back()" class="text-gray-600 hover:text-gray-900 transition absolute left-0 top-1/2 -translate-y-1/2">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path>
+                    </svg>
+                </button> -->
+
+
                 <h1 class="text-3xl font-bold text-center mx-auto" style="color: var(--primary-color);">MY PROFILE</h1>
             </div>
 
@@ -97,8 +105,6 @@
                 </a>
             </div>
         </div>
-        
-
     </div>
     
 </body>
